--- a/iploka-client/composer.json
+++ b/iploka-client/composer.json
@@ -1,22 +1,12 @@
 {
-    "name": "ab/iploka",
+    "name": "xyz/iploka",
     "type": "library",
-    "description": "A PHP wrapper using Iploka API",
-    "keywords": ["api", "ip", "iploka", "geocode", "php"],
-    "homepage": "https://github.com/GitHubHubus/ipstack-client",
     "authors": [
         {
-            "name": "Allen",
+            "name": "allen",
             "email": "allen@howuku.com"
         }
     ],
-    "require": {
-        "php": ">=7.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "AB\\Iploka\\": "src/"
-        }
-    }
-    
+    "minimum-stability": "stable",
+    "require": {}
 }
