--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "php": ">=7.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "AB\\Iploka\\": "src/"
+        }
+    }
 }
