--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,17 @@
 {
     "name": "abab/iploka",
+    "description": "geolocation using iploka",
     "type": "library",
-    "authors": [
-        {
-            "name": "allen",
-            "email": "allen@howuku.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": ">=7.0"
-    },
-    
     "autoload": {
         "psr-4": {
             "AB\\Iploka\\": "src/"
         }
-    }
+    },
+    "authors": [
+        {
+            "name": "Allen",
+            "email": "allendbradley97@gmail.com"
+        }
+    ],
+    "require": {}
 }
